[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.black]
line-length = 88
target-version = ['py312']

[tool.poetry]
description = 'A modern Python library for geospatial location management with PostgreSQL'
name = 'geolibrary'
readme = 'README.md'
version = "0.6.0"

[tool.poetry.dependencies]
alembic = '^1.13.0'
click = '^8.0.0'
psycopg2-binary = '^2.9.0'
python = '^3.12'
sqlalchemy = '^2.0.0'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
pytest = '^8.0.0'
pytest-cov = '^4.1.0'

[[tool.poetry.packages]]
from = 'src'
include = 'geolibrary'

[tool.poetry.scripts]
geolib = 'geolibrary.cli:main'

[tool.ruff]
line-length = 88
target-version = 'py312'
